final project commit 2

--- a/project/index.html
+++ b/project/index.html
@@ -30,7 +30,7 @@
         </nav>
     </header>
     <main>
-        <h2 class="page-title"></h2>
+        <div class="page-title"></div>
         <div id="banner">
             <!-- use dynamic js to generate welcome message based on local storage number of visits -->
             <p class="welcome-message"></p>
@@ -49,12 +49,12 @@
             </p>
         </div>
         <div class="title-cards">
-            <section class="perio"><img src="images/perio.webp" alt="periodontics" width="300" height="150" loading="lazy"><a href="specialties/perio.html">Periodontics</a></section>
-            <section class="preventive"><img src="images/prev.webp" alt="preventive" width="300" height="150" loading="lazy"><a href="specialties/preventive.html">Preventive Dentistry</a></section>
-            <section class="resto"><img src="images/resto.webp" alt="restorative" width="300" height="150" loading="lazy"><a href="specialties/restorative.html">Restorative Dentistry</a></section>
-            <section class="omfs"><img src="images/omfs.webp" alt="omfs" width="300" height="150" loading="lazy"><a href="specialties/omfs.html">Oral and Maxillofacial Surgery</a></section>
-            <section class="om-op"><img src="images/omop.webp" alt="oral-medicine-oral-pathology" width="300" height="150" loading="lazy"><a href="specialties/om-op.html">Oral Medicine/Oral Pathology</a></section>
-            <section class="oral-biology"><img src="images/ob.webp" alt="oral-biology" width="300" height="150" loading="lazy"><a href="specialties/oral-biology.html">Oral Biology</a></section>
+            <section class="perio"><img src="images/perio.webp" alt="periodontics" width="300" height="150" loading="lazy"><a href="specialties/perio.html"><h4>Periodontics</h4></a></section>
+            <section class="preventive"><img src="images/prev.webp" alt="preventive" width="300" height="150" loading="lazy"><a href="specialties/preventive.html"><h4>Preventive Dentistry</h4></a></section>
+            <section class="resto"><img src="images/resto.webp" alt="restorative" width="300" height="150" loading="lazy"><a href="specialties/restorative.html"><h4>Restorative Dentistry</h4></a></section>
+            <section class="omfs"><img src="images/omfs.webp" alt="omfs" width="300" height="150" loading="lazy"><a href="specialties/omfs.html"><h4>Oral and Maxillofacial Surgery</h4></a></section>
+            <section class="om-op"><img src="images/omop.webp" alt="oral-medicine-oral-pathology" width="300" height="150" loading="lazy"><a href="specialties/om-op.html"><h4>Oral Medicine/Oral Pathology</h4></a></section>
+            <section class="oral-biology"><img src="images/ob.webp" alt="oral-biology" width="300" height="150" loading="lazy"><a href="specialties/oral-biology.html"><h4>Oral Biology</h4></a></section>
         </div>
 
     </main>
