--- a/project/specialties/om-op.html
+++ b/project/specialties/om-op.html
@@ -32,7 +32,7 @@
         </nav>
     </header>
     <main>
-        <h2 class="page-title"></h2>
+        <div class="page-title"></div>
         <div id="banner">
             <!-- use dynamic js to generate welcome message based on local storage number of visits -->
             <p class="welcome-message"></p>
@@ -48,19 +48,18 @@
         <div id="content-box">
             <article class="must">
                 <h3>Name the three main forms of amelogenesis imperfecta.</h3>
-                <p>
-                    <ol>
-                        <li><strong>Hypoplastic form:</strong> inadequate deposition of enamel matrix. Whatever is deposited calcifies normally. The teeth have thin enamel that may be pitted.</li>
-                        <li><strong>Hypomaturation form:</strong> adequate deposition of enamel, but the enamel crystal does not mature normally. The result is soft pigmented enamel that chips easily</li>
-                        <li><strong>Hypocalcified form:</strong>  inadequate mineralization. The result is enamel that gets lost a few years after eruption.</li>
-                    </ol>
-                </p>
+                <ol>
+                    <li><strong>Hypoplastic form:</strong> inadequate deposition of enamel matrix. Whatever is deposited calcifies normally. The teeth have thin enamel that may be pitted.</li>
+                    <li><strong>Hypomaturation form:</strong> adequate deposition of enamel, but the enamel crystal does not mature normally. The result is soft pigmented enamel that chips easily</li>
+                    <li><strong>Hypocalcified form:</strong>  inadequate mineralization. The result is enamel that gets lost a few years after eruption.</li>
+                </ol>
+    
             </article>
 
             <article class="must">
                 <h3>Describe the different types of dentinogenesis imperfecta.</h3>
                 <p>
-                Dentinogenesis imperfecta (DI) is a condition caused by abnormal dentin formation and several types exist. The classic type lead to opalescent teeth in the primary and permanent dentition. The teeth are bluish-brown and translucent. Enamel is lost early, and the exposed dentine undergoes rapid attrition.
+                Dentinogenesis imperfecta (DI) is a condition caused by abnormal dentin formation and several types exist. The classic type lead to opalescent teeth in the primary and permanent dentition. The teeth are bluish-brown and translucent. Enamel is lost early, and the exposed dentine undergoes rapid attrition. </p>
                 <table>
                     <tr>
                         <td>Osteogenesis imperfecta with opalescent teeth</td>
@@ -71,17 +70,14 @@
                         <td>Dentin dysplasia Type II</td>
                     </tr>
                 </table>
-                </p>
             </article>
 
             <article class="nice">
                 <h3> Describe the two main types of dentin dysplasia.</h3>
-                <p>
-                    <ul>
-                        <li><strong>Type I, radicular type. </strong>The roots are poorly formed, short, and distorted or even absent, with poorly formed crescent-shaped pulp chambers and absent pulp canals. Periapical lucencies develop early and teeth exfoliate prematurely</li>
-                        <li><strong>Type II, coronal type. </strong>The crowns contain large pulp chambers that are thistle- or flameshaped, that extend into the root. Pulp stones often develop. Primary teeth look like those of dentinogenesis imperfect with early obliteration of the pulp.</li>
-                    </ul>
-                </p>
+                <ul>
+                    <li><strong>Type I, radicular type. </strong>The roots are poorly formed, short, and distorted or even absent, with poorly formed crescent-shaped pulp chambers and absent pulp canals. Periapical lucencies develop early and teeth exfoliate prematurely</li>
+                    <li><strong>Type II, coronal type. </strong>The crowns contain large pulp chambers that are thistle- or flameshaped, that extend into the root. Pulp stones often develop. Primary teeth look like those of dentinogenesis imperfect with early obliteration of the pulp.</li>
+                </ul>
             </article>
 
             <article class="must">
