--- a/project/specialties/omfs.html
+++ b/project/specialties/omfs.html
@@ -32,7 +32,7 @@
         </nav>
     </header>
     <main>
-        <h2 class="page-title"></h2>
+        <div class="page-title"></div>
         <div id="banner">
             <!-- use dynamic js to generate welcome message based on local storage number of visits -->
             <p class="welcome-message"></p>
@@ -48,15 +48,13 @@
         <div id="content-box">
             <article class="must">
                 <h3>What are the basic technical considerations in performing an incision?</h3>
-                <p>
-                    <ul>
-                        <li>Use a sharp blade of appropriate size.</li>
-                        <li>A firm, continuous stroke is preferable to short, soft, repeated strokes.</li>
-                        <li>Avoid vital structures.</li>
-                        <li>Use incisions that are parallel to relaxed skin tension lines.</li>
-                        <li>Consider the anatomy of the site in placement of the incision.</li>
-                    </ul>
-                </p>
+                <ul>
+                    <li>Use a sharp blade of appropriate size.</li>
+                    <li>A firm, continuous stroke is preferable to short, soft, repeated strokes.</li>
+                    <li>Avoid vital structures.</li>
+                    <li>Use incisions that are parallel to relaxed skin tension lines.</li>
+                    <li>Consider the anatomy of the site in placement of the incision.</li>
+                </ul>
             </article>
 
             <article class="nice">
@@ -68,34 +66,28 @@
 
             <article class="must">
                 <h3>What factors influence the placement of incisions in the mouth?</h3>
-                <p>
-                    <ul>
-                        <li>Anatomy and location of vital structures</li>
-                        <li>Convenience and access</li>
-                    </ul>
-                </p>
+                <ul>
+                    <li>Anatomy and location of vital structures</li>
+                    <li>Convenience and access</li>
+                </ul>
             </article>
 
             <article class="must">
                 <h3>What are the principles of flap design?</h3>
-                <p>
-                    <ul>
-                        <li>Flap design should ensure adequate blood supply; the base of the flap should be larger than the apex.</li>
-                        <li>Reflection of the flap should adequately expose the operative field.</li>
-                        <li>Flap design should permit atraumatic closure of the wound.</li>
-                    </ul>
-                </p>
+                <ul>
+                    <li>Flap design should ensure adequate blood supply; the base of the flap should be larger than the apex.</li>
+                    <li>Reflection of the flap should adequately expose the operative field.</li>
+                    <li>Flap design should permit atraumatic closure of the wound.</li>
+                </ul>
             </article>
 
             <article class="nice">
                 <h3>What are the most frequent causes of the tearing of mucogingival flaps?</h3>
-                <p>
-                    <ol>
-                        <li>Flaps are too small to provide adequate exposure.</li>
-                        <li>Too much force is used to elevate the flaps.</li>
-                        <li>The flap is not being elevated in the subperiosteal plane</li>
-                    </ol>
-                </p>
+                <ol>
+                    <li>Flaps are too small to provide adequate exposure.</li>
+                    <li>Too much force is used to elevate the flaps.</li>
+                    <li>The flap is not being elevated in the subperiosteal plane</li>
+                </ol>
             </article>
         </div>
     </main>
