--- a/project/specialties/perio.html
+++ b/project/specialties/perio.html
@@ -32,7 +32,7 @@
         </nav>
     </header>
     <main>
-        <h2 class="page-title"></h2>
+        <div class="page-title"></div>
         <div id="banner">
             <!-- use dynamic js to generate welcome message based on local storage number of visits -->
             <p class="welcome-message"></p>
@@ -48,14 +48,13 @@
         <div id="content-box">
             <article class="must">
                 <h3>Anatomically, what makes up the components of periodontium?</h3>
-                <p>
-                    <ul>
-                        <li>The gingiva</li>
-                        <li>Periodontal ligament</li>
-                        <li>Root cementum</li>
-                        <li>Alveolar bone</li>
-                    </ul>
-                </p>
+                <ul>
+                    <li>The gingiva</li>
+                    <li>Periodontal ligament</li>
+                    <li>Root cementum</li>
+                    <li>Alveolar bone</li>
+                </ul>
+            
 
             </article>
 
