--- a/project/specialties/preventive.html
+++ b/project/specialties/preventive.html
@@ -32,7 +32,7 @@
         </nav>
     </header>
     <main>
-        <h2 class="page-title"></h2>
+        <div class="page-title"></div>
         <div id="banner">
             <!-- use dynamic js to generate welcome message based on local storage number of visits -->
             <p class="welcome-message"></p>
@@ -55,36 +55,31 @@
 
             <article class="must">
                 <h3>What are the three tenets of public health?</h3>
-                <p>
-                    <ol>
-                        <li>A problem exists.</li>
-                        <li>Solutions to the problem exist.</li>
-                        <li>The solutions to the problem are applied.</li>
-                    </ol>
-                </p>
+                <ol>
+                    <li>A problem exists.</li>
+                    <li>Solutions to the problem exist.</li>
+                    <li>The solutions to the problem are applied.</li>
+                </ol>
             </article>
 
             <article class="must">
                 <h3>Public health efforts are usually directed toward acute problems, such as infectious disease, or chronic diseases such as cancer. What public health strategies are similar for these and most other diseases?</h3>
-                <p>
-                    <ol>
-                        <li>Surveillance</li>
-                        <li>Intervention</li>
-                        <li>Evaluation</li>
-                    </ol>
-                </p>
+                <ol>
+                    <li>Surveillance</li>
+                    <li>Intervention</li>
+                    <li>Evaluation</li>
+                </ol>
             </article>
 
             <article class="must">
                 <h3>What constitutes a public health problem?</h3>
                 <p>
-                A public health problem usually fulfills three criteria of the public, government, or public health authorities:
+                A public health problem usually fulfills three criteria of the public, government, or public health authorities:</p>
                 <ol>
                     <li>A condition or situation exists that is a widespread actual or potential cause of morbidity or mortality</li>
                     <li> Costs to community and to individuals are great.</li>
                     <li>Effective methods available to prevent, alleviate or cure.</li>
                 </ol>
-                </p>
             </article>
 
             <article class="nice">
