--- a/project/specialties/restorative.html
+++ b/project/specialties/restorative.html
@@ -32,7 +32,7 @@
         </nav>
     </header>
     <main>
-        <h2 class="page-title"></h2>
+        <div class="page-title"></div>
         <div id="banner">
             <!-- use dynamic js to generate welcome message based on local storage number of visits -->
             <p class="welcome-message"></p>
@@ -51,13 +51,12 @@
                 <p>
                 Over the decades, a number of definitions for dental caries have evolved, depending on the perspective of the author. A few are presented here.
                 </p>
-                <p>
-                    <ol>
-                        <li>Dental caries is an infectious, communicable disease, resulting in destruction of tooth structure by acid-forming bacteria found in dental plaque, an intraoral biofilm, in the presence of sugar.</li>
-                        <li>Dental caries is an infectious, communicable, transmissible disease caused by bacterial invasion resulting in the breakdown of the tooth structure</li>
-                        <li>Dental caries is a microbial disease of the calcified tissues of the teeth, characterized by demineralization of the inorganic portion and destruction of the organic substance of the tooth. The former constitutes the acidogenic theory and the latter the proteolytic theory.</li>
-                    </ol>
-                </p>
+                <ol>
+                    <li>Dental caries is an infectious, communicable disease, resulting in destruction of tooth structure by acid-forming bacteria found in dental plaque, an intraoral biofilm, in the presence of sugar.</li>
+                    <li>Dental caries is an infectious, communicable, transmissible disease caused by bacterial invasion resulting in the breakdown of the tooth structure</li>
+                    <li>Dental caries is a microbial disease of the calcified tissues of the teeth, characterized by demineralization of the inorganic portion and destruction of the organic substance of the tooth. The former constitutes the acidogenic theory and the latter the proteolytic theory.</li>
+                </ol>
+                
             </article>
 
             <article class="nice">
