--- a/project/nav-footer/resources-further-study.html
+++ b/project/nav-footer/resources-further-study.html
@@ -30,7 +30,7 @@
         </nav>
     </header>
     <main>
-        <h2 class="page-title"></h2>
+        <div class="page-title"></div>
         <div id="banner">
             <!-- use dynamic js to generate welcome message based on local storage number of visits -->
             <p class="welcome-message"></p>
